<resources>
    <string name="app_name">My Home Grocers</string>
    <string name="mTv_Login">Login</string>
    <string name="mTv_Signup">Signup</string>
    <string name="mTv_Welcomeback">Welcome Back,</string>
    <string name="mTv_LoginToContinue">Login to continue</string>
    <string name="med_HintEmailId">Email ID/Mobile Number</string>
    <string name="med_hintpassword">Password</string>
    <string name="mBtn_Next">Next</string>
    <string name="mBtn_Login">Login</string>
    <string name="mCb_Remember">Remember me</string>
    <string name="mTv_Heygetonboard">Hey,get on board</string>
    <string name="mtv_Signuptocontinue">Signup to continue</string>
    <string name="med_FirstName">First Name*</string>
    <string name="med_HintLastName">Last Name*</string>
    <string name="med_MobileNumber">Mobile Number*</string>
    <string name="mbtn_Signup">Signup</string>

    <string name="mTv_ForgotyourPassword">Forgot your Password ?</string>
    <string name="mTv_pleaseupdatetocontinue">please update to continue</string>
    <string name="med_CurrentPassword">Current Password*</string>
    <string name="med_NewPassword">New Password*</string>
    <string name="med_RenterNewPassword">Renter New Password*</string>
    <string name="mBtn_ChangePassword">Change Password</string>
    <string name="mTv_WelcomeBack">Welcome Back,</string>
    <string name="mTv_Logintocontinue">Login to continue</string>
    <string name="mtv_ResendOtp">RESEND OTP</string>
    <string name="mTv_CustomerName">Customer Name</string>
    <string name="mEx_MobileNmuber">+1(123) 456-7890</string>
    <string name="mTv_MyOrders">My Orders</string>
    <string name="mTv_Wishlist">Wishlist</string>
    <string name="mTv_Wallet">Wallet</string>
    <string name="mTv_AddressDetails">Address Details</string>
    <string name="mTv_Faq">FAQ</string>
    <string name="mTv_Legal">Legal</string>
    <string name="mcurrent_password">Current Password*</string>
    <string name="medtxtNewPassword">New Password*</string>
    <string name="medTxtConfirmNewPassword">Confirm Password*</string>
    <string name="mTxtPasswordmustcontain">Password must contain:</string>
    <string name="mTxtAtleast1uppercaseletter">At least 1 uppercase letter(A-Z)</string>
    <string name="mTxtAtleast1number">At least 1 number(0-9)</string>
    <string name="mTxtAtleast8characters">At least 8 characters</string>
    <string name="mbtnUpdatePassword">Update Password</string>
    <string name="mTv_HintFirstName">First Name*</string>
    <string name="mTv_HintLastName">Last Name*</string>
    <string name="mtv_HintEmail">Email*</string>
    <string name="mTv_Hintmoiblenumber">Mobile Number*</string>
    <string name="mBtn_Notnow">Not now</string>
    <string name="mBtn_Update">Update</string>
    <string name="med_Hintarea">Area,colony*</string>
    <string name="med_HintName">Name*</string>
    <string name="med_HintPhoneNumber">Phone Number*</string>
    <string name="med_HintUsemycurrentlocation">Use My Current Location</string>
    <string name="mtv_Hintpleaseupdatetocontinue">please update to continue</string>
    <string name="mtv_Hintforgotourpassword">Forgot Your Password ?</string>
    <string name="mtxtchangepassword">Change Password</string>
    <string name="mtv_forgotpassword">FORGOT PASSWORD ?</string>
    <string name="mtv_ConnectUsing">Connect Using :</string>
    <string name="ed_Hintlandmark">Landmark</string>
    <string name="ed_Hintalternatenumber">Alternate Phone Number</string>
    <string name="mtv_deliver_to">Deliver to Customer Name-Location Pincode</string>
    <string name="mBtn_Changemail">CHANGE EMAIL</string>
    <string name="mtv_description">Verification Code</string>
    <string name="mtv_desctxt">Please enter the verification code sent to mobile number</string>
    <string name="mtv_Terms_and_services">By Creating an account,you agree to the MyHomeGrocers Terms of Services and Private Policy</string>
    <string name="firstname">Enter First Name</string>
    <string name="lastname">Enter Last Name</string>
    <string name="txt_mobilenumber">Enter Mobile Number</string>
    <string name="txt_email">Enter Email ID/Mobile Number</string>
    <string name="txt_password">Enter Password</string>
    <string name="txt_signupsuccess">signUp success</string>
    <string name="txt_emptyfields">Field\'s can\'t be Empty</string>
    <string name="txt_loginsuccess">Login success</string>

    <string name="facebook_app_id">593159884715179</string>
    <string name="fb_login_protocol_scheme">fb593159884715179</string>

    <string name="server_client_id">437041180105-b40le99cj88mcpao468g0h22nscv59k6.apps.googleusercontent.com</string>
    <string name="server_client_secret">M2MFal6Lj1g0tDO-xwRSbb4q</string>
    <string name="tv_email.com">email id@email.com</string>
    <string name="med_addressline1">Address Line 1*</string>
    <string name="accept_terms">Accept Terms &amp; Conditions</string>
    <string name="please_wait">Please Wait...</string>
    <string name="mail_phone_exists">Telephone is already registered!</string>
    <string name="mtv_txt_testmail">Please enter the verification code sent to {}</string>
    <string name="lbl_please_enter_the_otp_sent_to">Please enter the OTP sent to _</string>
    <string name="cmn_something_wrong">Something went wrong!!!</string>

    <string name="start">Start</string>
    <string name="next">Next</string>
    <string name="txt_todo">Todo</string>
    <string name="dash_home">Home</string>
    <string name="dash_cart">Cart</string>
    <string name="dash_spl_offers">Special Offers</string>
    <string name="dash_my_orders">My Orders</string>
    <string name="dash_notifications">Notifications</string>

    <string name="login_error">"User is not logged."</string>

</resources>