<?xml version="1.0" encoding="utf-8"?>
<layout>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/rl_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_15sdp"
            android:layout_alignParentTop="true"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_alignParentLeft="true"
                android:layout_centerInParent="true"
                android:layout_marginLeft="@dimen/_5sdp"
                android:scaleType="centerCrop"
                android:onClick="passwordBackarrow"
                android:clickable="true"
                android:src="@drawable/ic_back_arrow" />

            <Button
                android:id="@+id/btnchangemail"
                android:layout_width="@dimen/_143sdp"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_border"
                android:backgroundTint="@color/bright_orange"
                android:fontFamily="@font/poppins_medium"
                android:onClick="changeEmail"
                android:clickable="true"
                android:text="@string/mBtn_Changemail"
                android:textColor="#fff"
                android:gravity="center"
                android:textSize="@dimen/Change_Email"
                android:layout_alignParentRight="true"
                />
        </RelativeLayout>
        <EditText
            android:id="@+id/edtxtpassword"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:backgroundTint="@color/colorOrange"
            android:layout_margin="@dimen/_15sdp"
            android:clickable="true"
            android:fontFamily="@font/poppins_medium"
            android:hint="@string/med_hintpassword"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:textColor="@color/colorgray"
            android:textSize="@dimen/Logintextsize" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_forgotYourPassword"
            android:text="@string/mtv_forgotpassword"
            android:textSize="@dimen/tv_Forgot_Password"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:textColor="@color/colorOrange"
            android:gravity="end"/>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_25sdp"
            android:background="@drawable/rounded_border"
            android:backgroundTint="@color/bright_orange"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center"
            android:text="@string/mBtn_Login"
            android:textAllCaps="false"
            android:textColor="#fff"
            android:textSize="@dimen/btn_login"

            />
    </LinearLayout>
</layout>
