<?xml version="1.0" encoding="utf-8"?>
<layout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/transparent">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@drawable/card_top_curve"
            android:baselineAligned="false"
            android:elevation="@dimen/_10sdp"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="5">

            <LinearLayout
                android:id="@+id/llHome"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:clickable="true"
                android:gravity="center"
                android:onClick="onClick"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/ivHome"
                    android:layout_width="@dimen/bottom_icon"
                    android:layout_height="@dimen/bottom_icon"
                    android:layout_marginTop="4dp"
                    android:contentDescription="@string/txt_todo"
                    android:padding="@dimen/_4sdp"
                    app:srcCompat="@drawable/ic_active_mhg_logo" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:fontFamily="@font/poppins_bold"
                    android:gravity="center_horizontal"
                    android:text="@string/dash_home"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/_6sdp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_orders"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:clickable="true"
                android:gravity="center"
                android:onClick="onClick"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/iv_orders"
                    android:layout_width="@dimen/bottom_icon"
                    android:layout_height="@dimen/bottom_icon"
                    android:layout_marginTop="4dp"
                    android:contentDescription="@string/txt_todo"
                    android:padding="@dimen/_4sdp"
                    app:srcCompat="@drawable/ic_myorders_inactive" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:fontFamily="@font/poppins_bold"
                    android:gravity="center_horizontal"
                    android:text="@string/dash_my_orders"
                    android:textSize="@dimen/_6sdp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_notifications"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:clickable="true"
                android:gravity="center"
                android:onClick="onClick"
                android:orientation="vertical"
                android:visibility="visible">

                <ImageView
                    android:id="@+id/iv_notifications"
                    android:layout_width="@dimen/bottom_icon"
                    android:layout_height="@dimen/bottom_icon"
                    android:layout_marginTop="4dp"
                    android:contentDescription="@string/txt_todo"
                    android:padding="@dimen/_4sdp"
                    app:srcCompat="@drawable/ic_bell_inactive" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:fontFamily="@font/poppins_bold"
                    android:gravity="center_horizontal"
                    android:text="@string/dash_notifications"
                    android:textSize="@dimen/_6sdp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_special_offers"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:clickable="true"
                android:gravity="center"
                android:onClick="onClick"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/iv_special_offers"
                    android:layout_width="@dimen/bottom_icon"
                    android:layout_height="@dimen/bottom_icon"
                    android:layout_marginTop="4dp"
                    android:contentDescription="@string/txt_todo"
                    android:padding="@dimen/_4sdp"
                    app:srcCompat="@drawable/ic_special_offers_inactive" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:fontFamily="@font/poppins_bold"
                    android:gravity="center_horizontal"
                    android:text="@string/dash_spl_offers"
                    android:textSize="@dimen/_6sdp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_cart"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:clickable="true"
                android:gravity="center"
                android:onClick="onClick"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/iv_cart"
                    android:layout_width="@dimen/bottom_icon"
                    android:layout_height="@dimen/bottom_icon"
                    android:layout_marginTop="4dp"
                    android:contentDescription="@string/txt_todo"
                    android:padding="@dimen/_4sdp"
                    app:srcCompat="@drawable/ic_cart_inactive" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:fontFamily="@font/poppins_bold"
                    android:gravity="center_horizontal"
                    android:text="@string/dash_cart"
                    android:textSize="@dimen/_6sdp" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</layout>
